--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "morgan": "^1.10.0",
