--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "cypress:open": "cypress open"
+        "cypress": "cypress open"
     },
     "eslintConfig": {
         "extends": [
