--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     },
     "proxy": "http://localhost:3001",
     "devDependencies": {
-        "cypress": "^9.0.0"
+        "cypress": "^9.0.0",
+        "cypress-react-selector": "^2.3.13"
     }
 }
