--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,19 @@ sonar.organization=p07spg2021
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+#we set sonar.sources to ./server in order to calculate coverage only on its files
+sonar.sources=./server
+#we exclude all test files (the ones inside the tests folder) from coverage calculation
+sonar.exclusions=**/tests/*.js
+sonar.language=js
+sonar.tests=./server/tests
+
+#we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
+sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
+
+#dont't know what to do with this
+#sonar.testExecutionReportPaths=./test-report.xml
