--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,5 +20,5 @@ sonar.tests=./server/tests
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
 sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
 
-#dont't know what to do with this
-#sonar.testExecutionReportPaths=./test-report.xml
+#setting report file
+sonar.testExecutionReportPaths=./test-report.xml
