sonarcloud and jest binding (3)

--- a/server/package.json
+++ b/server/package.json
@@ -4,24 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand --coverage",
+    "test": "jest --runInBand --coverage --detectOpenHandles",
     "start": "node server.js"
   },
   "jest": {
     "testEnvironment": "node",
     "collectCoverage": true,
-    "testResultsProcessor": "jest-sonar-reporter",
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "/test/"
+      "/tests/"
     ],
     "testPathIgnorePatterns": [
-      "tests/api-products",
-      "tests/api-requests",
-      "tests/api-completeOrders",
-      "tests/api-farmers",
-      "tests/api-users",
-      "tests/api-orders"
+      
     ]
   },
   "author": "",
@@ -39,7 +33,6 @@
   },
   "devDependencies": {
     "jest": "^27.3.1",
-    "jest-sonar-reporter": "^2.0.0",
     "supertest": "^6.1.6"
   }
 }
