--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,4 +21,4 @@ sonar.tests=./server/tests
 sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
 
 #setting report file
-sonar.testExecutionReportPaths=./test-report.xml
+sonar.testExecutionReportPaths=./server/test-report.xml
