--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,7 @@
       "/node_modules/",
       "/tests/"
     ],
-    "testPathIgnorePatterns": [
-      
-    ]
+    "testPathIgnorePatterns": []
   },
   "author": "",
   "license": "ISC",
