--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts -r @cypress/instrument-cra start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "cypress": "cypress open"
+        "cypress": "cypress open",
+        "cypress:coverage": "npx nyc report --reporter=text-summary",
+        "coverage": "start ./report.sh"
     },
     "eslintConfig": {
         "extends": [
@@ -44,7 +46,10 @@
     },
     "proxy": "http://localhost:3001",
     "devDependencies": {
-        "cypress": "^9.0.0",
-        "cypress-react-selector": "^2.3.13"
+        "@cypress/code-coverage": "^3.9.11",
+        "babel-plugin-istanbul": "^6.1.1",
+        "cypress": "^9.1.0",
+        "cypress-react-selector": "^2.3.13",
+        "nyc": "^15.1.0"
     }
 }
