Tech debt management

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,3 +22,6 @@ sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
 
 #setting report file
 sonar.testExecutionReportPaths=./server/test-report.xml
+
+#ignore duplicated code in client/instrumented
+sonar.cpd.exclusions=./client/instrumented
