--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,4 +24,4 @@ sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
 sonar.testExecutionReportPaths=./server/test-report.xml
 
 #ignore duplicated code in client/instrumented
-sonar.cpd.exclusions=./client/instrumented
+sonar.cpd.exclusions=./client/instrumented/**
