--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,9 @@ sonar.organization=p07spg2021
 sonar.sources=./server
 #we exclude all test files (the ones inside the tests folder) from coverage calculation
 sonar.exclusions=**/tests/*.js
+#ignore duplicated code in client/instrumented
+sonar.cpd.exclusions=./client/instrumented/*.js
+
 sonar.language=js
 sonar.tests=./server/tests
 
@@ -23,5 +26,4 @@ sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
 #setting report file
 sonar.testExecutionReportPaths=./server/test-report.xml
 
-#ignore duplicated code in client/instrumented
-sonar.cpd.exclusions=./client/instrumented/**
+
