--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=./server
 #we exclude all test files (the ones inside the tests folder) from coverage calculation
 sonar.exclusions=**/tests/*.js
 #ignore duplicated code in client/instrumented
-sonar.cpd.exclusions=./client/instrumented/*.js
+sonar.cpd.exclusions=client/instrumented/*.js
 
 sonar.language=js
 sonar.tests=./server/tests
