--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 
 #we set sonar.sources to ./server in order to calculate coverage only on its files
-sonar.sources=./server
+sonar.sources=.
 #we exclude all test files (the ones inside the tests folder) from coverage calculation
 sonar.exclusions=**/tests/*.js
 #ignore duplicated code in client/instrumented
