--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,13 +9,10 @@ sonar.organization=p07spg2021
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-
 sonar.sources=.
 sonar.language=js
-#we exclude all test files (the ones inside the tests folder) from coverage calculation
-sonar.exclusions=**/tests/*.js
-#ignore duplicated code in client/instrumented
-sonar.cpd.exclusions=client/instrumented/**/*.js
+#files excluded from scan
+sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*
 
 sonar.tests=./server/tests
 
