--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -14,7 +14,7 @@ sonar.language=js
 #files excluded from scan
 sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*
 
-#sonar.tests=server/tests
+sonar.tests=server/tests
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
 sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
