--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=mrwasp98_se2021-07-SolidarityPurchasingGroup
-sonar.organization=p07spg2021
+#sonar.projectKey=mrwasp98_se2021-07-SolidarityPurchasingGroup
+#sonar.organization=p07spg2021
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=se2021-07-SolidarityPurchasingGroup
