--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -12,7 +12,7 @@
 sonar.sources=.
 sonar.language=js
 #files excluded from scan
-#sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*
+sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*
 
 sonar.tests=server/tests
 
