--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.organization=p07spg2021
 sonar.sources=.
 sonar.language=js
 #files excluded from scan
-sonar.exclusions=**/tests/*.js,  client/instrumented/*, client/cypress/**
+sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 
 sonar.tests=server/tests
 
