--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,10 +11,12 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.language=js
-#files excluded from scan
-sonar.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
-
 sonar.tests=server/tests
+#files excluded from coverage scan
+sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
+#files excluded from duplicate code scan
+sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
+
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
 sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
