--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.tests=server/tests
 #files excluded from coverage scan
 sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
-sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
+sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
