--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
       "/node_modules/",
       "/tests/"
     ],
-    "testPathIgnorePatterns": []
+    "testPathIgnorePatterns": [
+      
+    ]
   },
   "author": "",
   "license": "ISC",
