--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,9 +19,9 @@ sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/
 
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
-sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
 
 #setting report file
-sonar.testExecutionReportPaths=./server/test-report.xml
+sonar.testExecutionReportPaths=server/test-report.xml
 
 
