--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,8 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.language=js
-sonar.tests=server/tests
+sonar.tests=.
+sonar.test.inclusions=server/tests/*.test.js
 #files excluded from coverage scan
 sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
