--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.organization=p07spg2021
 sonar.sources=.
 sonar.language=js
 sonar.tests=.
-sonar.test.inclusions=server/tests/*.test.js
+sonar.test.inclusions=**/tests/*.test.js
 #files excluded from coverage scan
 sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
@@ -20,9 +20,9 @@ sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/
 
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
-sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=**/server/coverage/lcov.info
 
 #setting report file
-sonar.testExecutionReportPaths=server/test-report.xml
+sonar.testExecutionReportPaths=**/server/test-report.xml
 
 
