--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.organization=p07spg2021
 sonar.sources=.
 sonar.language=js
 sonar.tests=.
-sonar.test.inclusions=**/tests/*.test.js
+sonar.test.inclusions=**/tests/api-clients.test.js, **/tests/api-completeOrders.test.js, **/tests/api-farmers.test.js, **/tests/api-orders.test.js, **/tests/api-products.test.js, **/tests/api-requests.test.js, **/tests/api-users.test.js
 #files excluded from coverage scan
 sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
