--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,6 +23,6 @@ sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/
 sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
 
 #setting report file
-sonar.testExecutionReportPaths=**/test-report.xml
+sonar.testExecutionReportPaths=server/test-report.xml
 
 
