--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "jest": {
     "testEnvironment": "node",
     "collectCoverage": true,
+    "testResultsProcessor": "jest-sonar-reporter",
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/tests/"
