--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,11 +13,12 @@ sonar.sources=.
 sonar.language=js
 sonar.tests=.
 sonar.test.inclusions=**/tests/*.test.js
+#files to be ignored
+sonar.exclusions=**/node_modules/**
 #files excluded from coverage scan
 sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
 sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
-
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
 sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
