--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,14 +16,14 @@ sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
 sonar.exclusions=**/node_modules/**
 #files excluded from coverage scan
-#sonar.test.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
+sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
 sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
-sonar.javascript.lcov.reportPaths=C:/Users/Utente/Desktop/Università/Software Engineering 2/Project/se2021-07-SolidarityPurchasingGroup/server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=**/server/coverage/lcov.info
 
 #setting report file
-#sonar.testExecutionReportPaths=server/test-report.xml
+sonar.testExecutionReportPaths=**/server/test-report.xml
 
 
