--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,9 +21,9 @@ sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrume
 sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
-sonar.javascript.lcov.reportPaths=**/server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
 
 #setting report file
-sonar.testExecutionReportPaths=**/server/test-report.xml
+sonar.testExecutionReportPaths=server/test-report.xml
 
 
