--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.language=js
 sonar.tests=.
 sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
-sonar.exclusions=**/node_modules/**
+sonar.exclusions=**/node_modules/**, **/tests/*.test.js
 #files excluded from coverage scan
 sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
