--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,10 +11,10 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.language=js
-sonar.tests=.
+sonar.tests=server/tests
 sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
-sonar.exclusions=**/node_modules/**, **/tests/*.test.js
+sonar.exclusions=**/node_modules/**
 #files excluded from coverage scan
 sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 #files excluded from duplicate code scan
