--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.language=js
-sonar.tests=server/tests
+sonar.tests=server
 sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
 sonar.exclusions=**/node_modules/**
@@ -21,7 +21,7 @@ sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrume
 sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
 
 #we tell SonarCloud where the lcov.info files are located (files where jest puts info on coverage)
-sonar.javascript.lcov.reportPaths=server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 #setting report file
 sonar.testExecutionReportPaths=server/test-report.xml
