--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.organization=p07spg2021
 #sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.language=js
-sonar.tests=server
+#sonar.tests=server
 sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
 sonar.exclusions=**/node_modules/**
