--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.organization=p07spg2021
 sonar.sources=.
 sonar.language=js
 #sonar.tests=server
-sonar.test.inclusions=**/tests/*.test.js
+#sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
 sonar.exclusions=**/node_modules/**
 #files excluded from coverage scan
