--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,31 @@
 version: '20.10.10'
 
 services: 
-    # sqlite3db:
-    #   container_name: sqlite3db
-    #   build: ./server/db
-    #   healthcheck:
-    #     test: exit 0
     server:
-      # depends_on:
-      #   - sqlite3db
       build: ./server
       ports:
-        - 5001:3001
-      environment:
-        - CLIENT_ORIGIN=http://127.0.0.1:3000
+        - "3001:3001"
+      # environment:
+      #   - CLIENT_ORIGIN=http://127.0.0.1:3000
       networks:
-        - backend
-        - frontend
+        - webappnetwork
+      volumes: 
+       - sqlite3db:/server/db/db
     client:
       depends_on:
       - server
-      build:
-        context: ./client
-        args:
-        - REACT_APP_API_BASE_URL=http://127.0.0.1:5001
+      build: ./client
+        # args:
+        # - REACT_APP_API_BASE_URL=http://127.0.0.1:5001
       ports:
-        - 5000:3000
+       - "3000:3000"
+      links:
+        - server
       networks:
-      - frontend
-
+      - webappnetwork
 volumes: 
-  db:
+  sqlite3db:
 
 networks:
-  backend:
-  frontend:
+  webappnetwork:
+    driver: bridge
