--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "react-bootstrap": "^2.0.2",
         "react-calendar": "^3.5.0",
         "react-dom": "^17.0.2",
+        "react-qr-code": "^2.0.3",
         "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
         "react-select": "^5.2.1",
