--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.test.inclusions=**/tests/*.test.js
 #files to be ignored
 sonar.exclusions=**/node_modules/**
 #files excluded from coverage scan
-sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/coverage/lcov-report/base.css
+sonar.coverage.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, **/client/cypress/coverage/lcov-report/base.css
 #files excluded from duplicate code scan
 sonar.cpd.exclusions=**/tests/*.js, client/instrumented/**, client/instrumented/*, client/cypress/**
  
