--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ client/package-lock.json
 client/cypress/dowloads/*
 client/cypress/plugins/*
 client/cypress/support/*
+client/coverage/lcov-report/*
