--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,6 +11,11 @@
 /coverage/clover.xml
 /coverage/coverage-summary.json
 
+cypress/coverage/lcov-report
+cypress/coverage/coverage-final.json
+cypress/coverage/clover.xml
+cypress/coverage/coverage-summary.json
+
 # production
 /build
 
