--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 lerna-debug.log*
 
 #testing
-/server/coverage/
+/server/coverage/**
 /server/test-report.xml
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
