--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 
 #testing
-/server/coverage/**
-/server/test-report.xml
+**/server/coverage/**
+**/server/test-report.xml
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
