--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,18 @@
     "testEnvironment": "node",
     "collectCoverage": true,
     "testResultsProcessor": "jest-sonar-reporter",
-    "reporters": ["default",  ["jest-sonar", {
-      "outputDirectory": ".",
-      "outputName": "test-report.xml",
-      "reportedFilePath": "absolute",
-      "relativeRootDir":"."
-  }]],
+    "reporters": [
+      "default",
+      [
+        "jest-sonar",
+        {
+          "outputDirectory": ".",
+          "outputName": "test-report.xml",
+          "reportedFilePath": "absolute",
+          "relativeRootDir": "."
+        }
+      ]
+    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/tests/"
@@ -32,6 +38,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.0.2"
