--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.2",
         "react-calendar": "^3.5.0",
+        "react-datepicker": "^4.5.0",
         "react-dom": "^17.0.2",
         "react-qr-code": "^2.0.3",
         "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
         "react-select": "^5.2.1",
-        "semantic-ui-react-datetimeinput": "^1.0.4",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
