--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "proxy": "http://localhost:3001",
     "devDependencies": {
         "@cypress/code-coverage": "^3.9.12",
+        "@testing-library/cypress": "^8.0.2",
         "babel-plugin-istanbul": "^6.1.1",
         "cypress": "^9.1.0",
         "cypress-react-selector": "^2.3.13",
