--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "dayjs": "^1.10.4",
+        "node-telegram-bot-api": "^0.51.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.2",
         "react-calendar": "^3.5.0",
