updated gitignore with telegram bot index

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+!node_modules
+/node_modules/*
+!/node_modules/node-telegram-bot-api
+/node_modules/node-telegram-bot-api/*
+!/node_modules/node-telegram-bot-api/index.js
+
 /.pnp
 .pnp.js
 
