--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#cypress index
+!cypress
+/cypress/*
+!/cypress/support
+/cypress/support/*
+!/cypress/support/index.js
+
 # dependencies
 !node_modules
 /node_modules/*
